--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     <div class="characterList"></div>
     <div class="pagination">
       <button id="firstPage">First</button>
-      <button id="prevPage">Previous</button>
+      <button id="prevPage">&lt;</button>
       <span id="currentPage">1</span>/<span id="totalPages">1</span>
-      <button id="nextPage">Next</button>
+      <button id="nextPage">&gt;</button>
       <button id="lastPage">Last</button>
+    </div>
+    <div class="pages">
       <label for="goToPage">Go to Page:</label>
       <input type="number" id="goToPage" min="1" max="42">
       <button id="goToPageButton">Go</button>
